# surfelwarp

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/algorithm_checker/: CMakeLists.txt
apps/compaction_test/: CMakeLists.txt
apps/crf_test/: CMakeLists.txt
apps/imgproc_test/: main.cpp
apps/surfelwarp_app/: CMakeLists.txt  main.cpp
apps/surfelwarp_thread/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  SynchronizeArray.h  TimeLogger.h  algorithm_types.h  data_transfer.cu  device_intrinsics.h  global_configs.h  point_cloud_typedefs.h
common/containers/: safe_call.hpp
core/: CMakeLists.txt  Camera.cpp  Camera.h  SurfelGeometry.h  SurfelWarpSerial.cpp  SurfelWarpSerial.h  SurfelWarpSerialDebug.cpp  nonRigidRecon.cpp  nonRigidRecon.h
core/geometry/: AppendSurfelProcessor.cu  LiveGeometryUpdater.cpp  SurfelNodeDeformer.cu  WarpFieldUpdater.cpp
core/render/: GLRenderedMaps.cpp  GLSurfelGeometryVAO.cpp  GLSurfelGeometryVBO.cpp  Renderer.cpp  Renderer.h  RendererDraw.cpp
core/render/imgui/: CMakeLists.txt  imconfig.h  imgui_impl_opengl3.cpp
core/warp_solver/: DensityForegroundJacobianResidual.cu  PreconditionerBlocked.cu
doc/: Maihn.md
hashing/: CMakeLists.txt
imgproc/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessorStreamed.cpp
imgproc/correspondence/: CMakeLists.txt
imgproc/frameio/: AzureKinectDKFetch.cpp  AzureKinectDKFetch.h  FetchInterface.h  GenericFileFetch.cpp  GenericFileFetch.h  RealsenseFectch.h  RealsenseFetch.cpp  RealsenseFetch.h  VolumeDeformFileFetch.cpp  VolumeDeformFileFetch.h
imgproc/segmentation/: CMakeLists.txt  ForegroundSegmenterOffline.cpp  ForegroundSegmenterOffline.h  ForegroundSegmenterPermutohedral.cu
math/: CMakeLists.txt  device_mat.h
pcg_solver/: CMakeLists.txt
test_data/: boxing_config.json  breathe_config.json  realsense_config.json
visualization/: CMakeLists.txt  ImageVisualizer.cpp  PointCloudVisualizer.cpp  VisualizationTransform.cu  generate_mask.py  image2video.py
