file(GLOB SURFELWARP_APP_SRC *.h *.hpp *.cpp *.cu)
cuda_add_executable(surfelwarp_app ${SURFELWARP_APP_SRC})
target_link_libraries(surfelwarp_app surfelwarp_common_lib)
target_link_libraries(surfelwarp_app surfelwarp_math_lib)
target_link_libraries(surfelwarp_app surfelwarp_imgproc_lib)
target_link_libraries(surfelwarp_app surfelwarp_core_lib)
target_link_libraries(surfelwarp_app surfelwarp_visualization_lib)